src/shell/shell.output
Terminals unused in grammar

   END


Grammar

    0 $accept: program $end

    1 program: transaction
    2        | program transaction

    3 transaction: start_sequence commands end_sequence
    4            | command
    5            | EXIT
    6            | HELP
    7            | NEWLINE
    8            | error

    9 start_sequence: START NEWLINE

   10 commands: command NEWLINE
   11         | commands command NEWLINE

   12 command: READ NUMBER
   13        | WRITE NUMBER STRING
   14        | WRITE NUMBER NUMBER

   15 end_sequence: COMMIT NEWLINE
   16             | ABORT NEWLINE


Terminals, with rules where they appear

$end (0) 0
error (256) 8
START (258) 9
END (259)
READ (260) 12
WRITE (261) 13 14
COMMIT (262) 15
ABORT (263) 16
EXIT (264) 5
HELP (265) 6
NEWLINE (266) 7 9 10 11 15 16
NUMBER (267) 12 13 14
STRING (268) 13


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
program (15)
    on left: 1 2, on right: 0 2
transaction (16)
    on left: 3 4 5 6 7 8, on right: 1 2
start_sequence (17)
    on left: 9, on right: 3
commands (18)
    on left: 10 11, on right: 3 11
command (19)
    on left: 12 13 14, on right: 4 10 11
end_sequence (20)
    on left: 15 16, on right: 3


State 0

    0 $accept: . program $end

    error    shift, and go to state 1
    START    shift, and go to state 2
    READ     shift, and go to state 3
    WRITE    shift, and go to state 4
    EXIT     shift, and go to state 5
    HELP     shift, and go to state 6
    NEWLINE  shift, and go to state 7

    program         go to state 8
    transaction     go to state 9
    start_sequence  go to state 10
    command         go to state 11


State 1

    8 transaction: error .

    $default  reduce using rule 8 (transaction)


State 2

    9 start_sequence: START . NEWLINE

    NEWLINE  shift, and go to state 12


State 3

   12 command: READ . NUMBER

    NUMBER  shift, and go to state 13


State 4

   13 command: WRITE . NUMBER STRING
   14        | WRITE . NUMBER NUMBER

    NUMBER  shift, and go to state 14


State 5

    5 transaction: EXIT .

    $default  reduce using rule 5 (transaction)


State 6

    6 transaction: HELP .

    $default  reduce using rule 6 (transaction)


State 7

    7 transaction: NEWLINE .

    $default  reduce using rule 7 (transaction)


State 8

    0 $accept: program . $end
    2 program: program . transaction

    $end     shift, and go to state 15
    error    shift, and go to state 1
    START    shift, and go to state 2
    READ     shift, and go to state 3
    WRITE    shift, and go to state 4
    EXIT     shift, and go to state 5
    HELP     shift, and go to state 6
    NEWLINE  shift, and go to state 7

    transaction     go to state 16
    start_sequence  go to state 10
    command         go to state 11


State 9

    1 program: transaction .

    $default  reduce using rule 1 (program)


State 10

    3 transaction: start_sequence . commands end_sequence

    READ   shift, and go to state 3
    WRITE  shift, and go to state 4

    commands  go to state 17
    command   go to state 18


State 11

    4 transaction: command .

    $default  reduce using rule 4 (transaction)


State 12

    9 start_sequence: START NEWLINE .

    $default  reduce using rule 9 (start_sequence)


State 13

   12 command: READ NUMBER .

    $default  reduce using rule 12 (command)


State 14

   13 command: WRITE NUMBER . STRING
   14        | WRITE NUMBER . NUMBER

    NUMBER  shift, and go to state 19
    STRING  shift, and go to state 20


State 15

    0 $accept: program $end .

    $default  accept


State 16

    2 program: program transaction .

    $default  reduce using rule 2 (program)


State 17

    3 transaction: start_sequence commands . end_sequence
   11 commands: commands . command NEWLINE

    READ    shift, and go to state 3
    WRITE   shift, and go to state 4
    COMMIT  shift, and go to state 21
    ABORT   shift, and go to state 22

    command       go to state 23
    end_sequence  go to state 24


State 18

   10 commands: command . NEWLINE

    NEWLINE  shift, and go to state 25


State 19

   14 command: WRITE NUMBER NUMBER .

    $default  reduce using rule 14 (command)


State 20

   13 command: WRITE NUMBER STRING .

    $default  reduce using rule 13 (command)


State 21

   15 end_sequence: COMMIT . NEWLINE

    NEWLINE  shift, and go to state 26


State 22

   16 end_sequence: ABORT . NEWLINE

    NEWLINE  shift, and go to state 27


State 23

   11 commands: commands command . NEWLINE

    NEWLINE  shift, and go to state 28


State 24

    3 transaction: start_sequence commands end_sequence .

    $default  reduce using rule 3 (transaction)


State 25

   10 commands: command NEWLINE .

    $default  reduce using rule 10 (commands)


State 26

   15 end_sequence: COMMIT NEWLINE .

    $default  reduce using rule 15 (end_sequence)


State 27

   16 end_sequence: ABORT NEWLINE .

    $default  reduce using rule 16 (end_sequence)


State 28

   11 commands: commands command NEWLINE .

    $default  reduce using rule 11 (commands)
